@@ -362,6 +362,8 @@
 (define-second-mouse (1 :mod-1) 'mouse-click-to-focus-and-move-window)
 (define-second-mouse (3 :mod-1) 'mouse-click-to-focus-and-resize-window)
 
+(define-second-mouse (1 :control :mod-1) 'mouse-move-window-over-frame)
+
 (define-second-mouse (4) 'sm-mouse-select-next-level)
 (define-second-mouse (5) 'sm-mouse-select-previous-level)
 
