@@ -127,6 +127,8 @@
 (define-main-mouse (1 :mod-1) 'mouse-click-to-focus-and-move-window)
 (define-main-mouse (3 :mod-1) 'mouse-click-to-focus-and-resize-window)
 
+(define-main-mouse (1 :control :mod-1) 'mouse-move-window-over-frame)
+
 (define-main-mouse (4) 'mouse-select-next-level)
 (define-main-mouse (5) 'mouse-select-previous-level)
 
