@@ -3,6 +3,10 @@
 	* src/clfswm-util.lisp (paste-selection-no-clear): Prevent to
 	paste a child on one of its own children. (this prevent a
 	recursive bug).
+	(move-child-to): Rename move/copy-current-child-by to
+	move/copy-child-to.
+	(mouse-move-window-over-frame): New function to move the window
+	under the mouse cursor to another frame.
 
 	* src/clfswm-internal.lisp (find-child-in-parent): New function.
 
